--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "native-base": "^2.7.2",
     "react": "16.4.1",
     "react-native": "0.55.4",
+    "react-native-easy-grid": "^0.2.0",
+    "react-native-onesignal": "^3.2.6",
     "react-navigation": "1.5.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
