--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: "com.android.application"
 
+// OneSignal
+apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+
 import com.android.build.OutputFile
 
 
@@ -95,8 +98,10 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
+    // compileSdkVersion rootProject.ext.compileSdkVersion
+    // buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.apps"
@@ -108,6 +113,16 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    // signingConfigs {
+    //     release {
+    //         if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+    //             storeFile file(MYAPP_RELEASE_STORE_FILE)
+    //             storePassword MYAPP_RELEASE_STORE_PASSWORD
+    //             keyAlias MYAPP_RELEASE_KEY_ALIAS
+    //             keyPassword MYAPP_RELEASE_KEY_PASSWORD
+    //         }
+    //     }
+    // }
     splits {
         abi {
             reset()
@@ -118,6 +133,7 @@ android {
     }
     buildTypes {
         release {
+            // signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -141,7 +157,8 @@ dependencies {
     compile project(':react-native-onesignal')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile ("com.facebook.react:react-native:0.55.4") { force = true }
+    // compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
