--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,19 +7,21 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        maven { url 'https://plugins.gradle.org/m2/' } // Gradle Plugin Portal onesignal
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.10.0, 0.99.99]'
 
-        // NOTE: Do not place your application dependencies here; they belong
+        // NOTE: Do not place your application  dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-
-
 allprojects {
     repositories {
+                // Add jitpack repository (added by react-native-spinkit)
+                maven { url "https://jitpack.io" }
         mavenLocal()
         jcenter()
         maven {
