--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,9 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xms256m -Xmx1024m
+# MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+# MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+# MYAPP_RELEASE_STORE_PASSWORD=123123
+# MYAPP_RELEASE_KEY_PASSWORD=123123
