--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "init": "^0.1.0",
     "native-base": "^2.7.2",
     "react": "16.4.1",
-    "react-native": "^0.55.4",
+    "react-native": "0.55.4",
     "react-native-easy-grid": "^0.2.0",
-    "react-native-onesignal": "^3.2.6",
+    "react-native-onesignal": "3.2.5",
     "react-navigation": "1.5.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
-  "devDependencies": {
-    "babel-jest": "23.4.2",
+   "devDependencies": {
+    "babel-jest": "^23.4.0",
     "babel-preset-react-native": "4.0.0",
-    "jest": "23.4.2",
-    "react-test-renderer": "16.4.1"
+    "jest": "^23.4.0",
+    "react-test-renderer": "15.4.1"
   },
   "jest": {
     "preset": "react-native"
